--- a/templates/ranking/filters.html.twig
+++ b/templates/ranking/filters.html.twig
@@ -52,18 +52,7 @@
             </select>
           </div>
           <div class="form-group">
-            <select class="form-control" name="filters[model]" onchange="filterData();">
-              <option value="">{{ 'coaster_ranking.filter.model'|trans }}</option>
-              {% for model in filtersForm.model %}
-                <option value="{{ model.id }}"
-                        {% if qS.filters.model is defined and qS.filters.model == model.id %}selected{% endif %}>
-                  {{ model.name }}
-                </option>
-              {% endfor %}
-            </select>
-          </div>
-          <div class="form-group">
-            <select class="form-control" name="filters[manufacturer]" onchange="filterData();">
+            <select class="form-control" name="filters[manufacturer]" onchange="filterData(); filterModels(event.target.value);">
               <option value="">{{ 'coaster_ranking.filter.manufacturer'|trans }}</option>
               {% for type in filtersForm.manufacturer %}
                 <option value="{{ type.id }}"
@@ -71,6 +60,17 @@
                   {{ type.name }}
                 </option>
               {% endfor %}
+            </select>
+          </div>
+          <div class="form-group">
+            <select class="form-control" name="filters[model]" onchange="filterData();">
+              <option value="">{{ 'coaster_ranking.filter.model'|trans }}</option>
+              {% for model in filtersForm.model %}
+                <option value="{{ model.id }}" data-manufacturer="{{ model.manufacturer.id|default('') }}"
+                  {% if qS.filters.model is defined and qS.filters.model == model.id %}selected{% endif %}>
+                    {{ model.name }}
+                  </option>
+                {% endfor %}
             </select>
           </div>
           <div class="form-group">
