[#199] - Display parks' former names

--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -4,6 +4,9 @@
 {% set title = park.name %}
 {% set subTitle = park.country.name|trans([], 'database') %}
 {% block title %}{{ title }} - {{ subTitle }}{% endblock %}
+{% if park.formerNames %}
+    {% set secondaryTitle = park.formerNames|join(', ') %}
+{% endif %}
 
 {% block body %}
     <div class="row">
