--- a/templates/User/list.html.twig
+++ b/templates/User/list.html.twig
@@ -1,7 +1,5 @@
 {% extends "base.html.twig" %}
 
-{% import "helper.html.twig" as helper %}
-
 {% set title = 'user_list.title'|trans %}
 {% block title %}{{ title }}{% endblock %}
 
@@ -14,37 +12,6 @@
         <p>{{ 'user_list.info.text'|trans }}</p>
     </div>
     {# /info alert #}
-    <div class="row">
-        <ul class="media-list content-group">
-            {% for user in users %}
-                <div class="col-lg-4 col-sm-6">
-                    <div class="panel panel-body">
-                        <div class="media">
-                            <div class="media-left">
-                                {{ helper.profilePicture(user.0) }}
-                            </div>
-                            <div class="media-body">
-                                <h6 class="media-heading">
-                                    <a href="{{ path('user_show', {'slug': user.0.slug}) }}">
-                                        {{ user.0.displayName }}
-                                    </a>
-                                </h6>
-                                <p class="text-muted">
-                                    {{ 'user_list.member_from'|trans }} {{ helper.displayDate(user.0.createdAt) }}
-                                </p>
-
-                                <h5 class="text-semibold no-margin">
-                                    <a href="{{ path('user_ratings', {'id': user.0.id}) }}">
-                                        {{ 'user_list.rating'|trans({'count': user.total_ratings}) }}
-                                    </a>
-                                </h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
-        </ul>
-    </div>
-
+    {% include 'Includes/list_users.html.twig' with {'users': users, 'border': true} %}
     {{ knp_pagination_render(users) }}
 {% endblock %}
