--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -129,7 +129,40 @@
         suggestion.route,
         {'slug': suggestion.slug, '_locale': '{{ app.request.locale }}'},
     );
+  }).bind('typeahead:render', function() {
+      if ($('#seeMoreResults').length < 1) {
+        $(".tt-dataset")
+          .append('<div role="option" id="seeMoreResults" class="tt-suggestion tt-selectable"><i class="icon-arrow-right8 position-left"></i> {{ 'search_index.more'|trans() }}</div>')
+          .on("click", () => seeMoreResults());
+        $(".tt-empty").css({"display": "block"});
+      }
   });
+
+  $("#search-coaster").on("keydown", (e) => {
+    if ((e.keyCode === 13 || e.keyCode === 9) &&
+        (
+          ($(".tt-dataset > *:not(#seeMoreResults)").length < 1 && $('#seeMoreResults').length === 1) ||
+          ($(".tt-dataset > *:not(#seeMoreResults)").length > 1 && $('#seeMoreResults').hasClass("tt-cursor"))
+        )
+    ) {
+      seeMoreResults();
+    }
+  });
+
+  // Mobile form validation
+  $("form.heading-form").on("submit", (e) => {
+      e.preventDefault();
+      if ($(".tt-dataset > *:not(#seeMoreResults)").length < 1 && $('#seeMoreResults').length === 1) {
+          seeMoreResults();
+      }
+  });
+
+  function seeMoreResults() {
+      window.location.href = Routing.generate(
+          'search_index',
+          {'_locale': '{{ app.request.locale }}', 'query': document.querySelector("#search-coaster").value}
+      );
+  }
 </script>
 {% block javascripts %}{% endblock %}
 {% if app.environment != 'dev' %}
