basic layout (navbar, sidebar, footer)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html data-theme="pastel">
+<html lang="en" class="group/html" data-theme="pastel">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>
+            {% block title %}
+                Welcome!
+            {% endblock %}
+        </title>
+        <link
+            rel="icon"
+            href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>" />
         {% block stylesheets %}
             {{ vite_entry_link_tags('app') }}
         {% endblock %}
@@ -11,8 +18,39 @@
         {% block javascripts %}
             {{ vite_entry_script_tags('app') }}
         {% endblock %}
+        {# prettier-ignore-start #}
+        <script type="text/javascript">
+            try { 
+                const localStorageItem = localStorage.getItem("captain-theme") 
+                if (localStorageItem) { 
+                    const theme = JSON.parse(localStorageItem).theme 
+                    if (theme !== "system") { 
+                        document.documentElement.setAttribute("data-theme", theme) 
+                    } 
+                } 
+            } catch (err) { 
+                console.log(err) 
+            }
+        </script>
+        {# prettier-ignore-end #}
     </head>
+
     <body>
-        {% block body %}{% endblock %}
+        <div class="size-full">
+            <div class="flex">
+                {{ include('components/_sidebar.html.twig') }}
+                <div class="flex h-screen min-w-0 grow flex-col overflow-auto">
+                    {{ include('components/_navbar.html.twig') }}
+
+                    <div id="layout-content">
+                        {% block body %}
+
+                        {% endblock %}
+                    </div>
+
+                    {{ include('components/_footer.html.twig') }}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
