--- a/assets/app.css
+++ b/assets/app.css
@@ -1,4 +1,11 @@
-@import "tailwindcss";
-@plugin "daisyui" {
-    themes: all;
+@import "./styles/typography.css";
+@import "./styles/tailwind.css";
+@import "./styles/daisyui.css";
+
+@import "./styles/animation.css";
+@import "./styles/components.css";
+@import "./styles/layout.css";
+
+@plugin "@iconify/tailwind4" {
+    prefixes: lucide;
 }
