--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -134,7 +134,7 @@
                 class="btn btn-sm btn-circle btn-ghost"
                 aria-label="Theme toggle">
                 <span
-                    class="iconify lucide--sun hidden size-4.5 group-data-[theme=light]/html:inline">
+                    class="iconify lucide--sun hidden size-4.5 group-data-[theme=pastel]/html:inline">
 
                 </span>
                 <span
@@ -145,18 +145,14 @@
                     class="iconify lucide--monitor hidden size-4.5 group-[:not([data-theme])]/html:inline">
 
                 </span>
-                <span
-                    class="iconify lucide--palette hidden size-4.5 group-data-[theme=contrast]/html:inline group-data-[theme=dim]/html:inline group-data-[theme=material]/html:inline group-data-[theme=material-dark]/html:inline">
-
-                </span>
             </div>
             <ul
                 tabindex="0"
                 class="dropdown-content menu bg-base-100 rounded-box z-1 mt-2 w-36 space-y-0.5 p-1 shadow-sm">
                 <li>
                     <div
-                        class="group-data-[theme=light]/html:bg-base-200 flex gap-2"
-                        data-theme-control="light">
+                        class="group-data-[theme=pastel]/html:bg-base-200 flex gap-2"
+                        data-theme-control="pastel">
                         <span class="iconify lucide--sun size-4.5"></span>
                         <span class="font-medium">Light</span>
                     </div>
