--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -61,7 +61,7 @@
 
                 &:before {
                     @apply bg-base-content/10 absolute start-4 top-10 bottom-2 w-px;
-                    content: "";
+                    content: '';
                 }
             }
         }
@@ -108,18 +108,18 @@
 
 /* == Overrides: specific to material theme and non-material theme == */
 
-html:not([data-theme="material"], [data-theme="material-dark"]) {
+html:not([data-theme='material'], [data-theme='material-dark']) {
     #layout-sidebar {
-        @apply border-base-200 border-e-[1px];
+        @apply border-base-300 border-e-[1px];
     }
 
     #layout-topbar {
-        @apply border-base-200 border-b;
+        @apply border-base-300 border-b;
     }
 }
 
-html[data-theme="material"],
-html[data-theme="material-dark"] {
+html[data-theme='material'],
+html[data-theme='material-dark'] {
     #layout-sidebar {
         max-height: calc(100vh - 32px);
         @apply rounded-box top-4 bottom-4 ms-4;
