--- a/assets/app.css
+++ b/assets/app.css
@@ -1,10 +1,10 @@
-@import "./styles/typography.css";
-@import "./styles/tailwind.css";
-@import "./styles/daisyui.css";
+@import './styles/typography.css';
+@import './styles/tailwind.css';
+@import './styles/daisyui.css';
 
-@import "./styles/animation.css";
-@import "./styles/components.css";
-@import "./styles/layout.css";
+@import './styles/animation.css';
+@import './styles/components.css';
+@import './styles/layout.css';
 
 @plugin "@iconify/tailwind4" {
     prefixes: lucide;
