update theme color

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-title" content="{{ 'app.name'|trans }}">
   <meta name="application-name" content="{{ 'app.name'|trans }}">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="theme-color" content="#2b5797">
+  <meta name="theme-color" content="#37474f">
   <link rel="manifest" href="{{ asset('manifest.json') }}">
   {% block header %}{% endblock %}
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
