[#228] - Enable status filter in Ranking depending on User's setting

--- a/templates/ranking/filters.html.twig
+++ b/templates/ranking/filters.html.twig
@@ -38,7 +38,8 @@
               <label class="display-block">
                 {{ 'map_index.filter.status'|trans }}
                 <input name="filters[status]" type="checkbox"
-                       class="switchery" {% if qS.filters.status is defined and qS.filters.status == "on" %} checked{% endif %}>
+                       class="switchery"
+                       {% if (app.user is not null and app.user.hideNonOperatingCoastersInTop100Stat is true) or (qS.filters.status is defined and qS.filters.status == "on") %} checked{% endif %}>
               </label>
             </div>
           </div>
