--- a/templates/Profile/index.html.twig
+++ b/templates/Profile/index.html.twig
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-sm-12">
           <!-- stats -->
-          {% include 'Profile/user_stats.html.twig' with {'stats': stats, 'hideNonOperatingCoastersInTop100Stat': hideNonOperatingCoastersInTop100Stat} only %}
+          {% include 'Profile/user_stats.html.twig' with {'stats': stats} only %}
           <!-- stats -->
           <!-- banner -->
           <div class="panel">
